--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.10.5",
-    "firebase": "^10.1.0",
+    "firebase": "^10.5.0",
+    "firebase-tools": "^12.7.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
